--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25396,6 +25396,15 @@ select {
   background: #f7f8fc;
 }
 
+.is-admin {
+  border-width: 1px;
+  border-image-source: linear-gradient(266deg, #21c8f6 -98%, #637bff -52%);
+  border-image-slice: -1;
+  background-image: linear-gradient(to-bottom, #fff, #fff), linear-gradient(268deg, #21c8f6 -98%, #637bff -52%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
 .is-admin::before {
   position: absolute;
   width: 38px;
