--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -39,6 +39,15 @@
     background: theme('colors.gray-background');
 }
 
+.is-admin {
+    border-width: 1px;
+    border-image-source: linear-gradient(266deg, #21c8f6 -98%, #637bff -52%);
+    border-image-slice: -1;
+    background-image: linear-gradient(to-bottom, #fff, #fff), linear-gradient(268deg, #21c8f6 -98%, #637bff -52%);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+}
+
 .is-admin::before {
     position: absolute;
     width: 38px;
